--- a/index.html
+++ b/index.html
@@ -24,28 +24,38 @@
         </ul>
       </nav>
     </header>
-        
     <main class="main">
-      <img class="image" src="./assets/avatar.png" alt="my avatar">
+
       <section class="section">
-        <h1>Viktor Morozov</h1>
-        <article id="сontacts">
-          <h2>Contacts</h2> 
-          <ul>
-              <li>GitHUB:<a href="https://github.com/MDViktor"> MDViktor</a></li>
-              <li>Discord: Виктор#1524 \ (MDViktor)</li>
-              <li>E-mail: milliondollarboymvd@gmail.com</li>
-              <li>tel.:+79788539557</li>
-          </ul>
-        </article>
+        <div class="top">
+          <div class="author_info">
+            <h1 class="name">Viktor Morozov</h1>
+            <article id="сontacts" class="contacts">
+              <h2>Contacts</h2> 
+              <ul>
+                  <li>GitHUB:<a href="https://github.com/MDViktor"> MDViktor</a></li>
+                  <li>Discord: Виктор#1524 \ (MDViktor)</li>
+                  <li>E-mail: milliondollarboymvd@gmail.com</li>
+                  <li>tel.:+79788539557</li>
+              </ul>
+            </article>
+          </div>
+          <div class="foto_container">
+            <img class="image" src="./assets/avatar.png" alt="my avatar">
+          </div>
+        </div>
         <article id="сompetencies">
           <h2>Competencies</h2>
           <pre>
-            The desire that everything obeys logic motivates me to create, to act. 
-            I love getting to the bottom of the truth. 
+            The desire that everything obeys logic motivates me to create, to act.
+            I love getting to the bottom of the truth. \
             I love mathematics, but for education I went to economics. 
-            I want to fix this by becoming a programmer. 
-            Today I am a printing press operator in a printing house, which gives me a good help for typesetting.
+            I want to fix this by becoming a programmer. \
+            Today I am a printing press operator in a printing house,
+            which gives me a good help for typesetting.\
+            I'm used to getting things done, that's why I am graduated
+            from JS/FE Pre-school and I'm going to finish the rest of
+            the courses at all.
           </pre>
         </article>
       </section>
