feat: css center

--- a/index.html
+++ b/index.html
@@ -44,49 +44,52 @@
             <img class="image" src="./assets/avatar.png" alt="my avatar">
           </div>
         </div>
-        <article id="сompetencies">
+        <article id="сompetencies" class="competencies">
           <h2>Competencies</h2>
-          <pre>
-            The desire that everything obeys logic motivates me to create, to act.
-            I love getting to the bottom of the truth. \
-            I love mathematics, but for education I went to economics. 
-            I want to fix this by becoming a programmer. \
-            Today I am a printing press operator in a printing house,
-            which gives me a good help for typesetting.\
-            I'm used to getting things done, that's why I am graduated
-            from JS/FE Pre-school and I'm going to finish the rest of
-            the courses at all.
-          </pre>
+          <div class="comp_container">
+            <pre>
+                  The desire that everything obeys logic motivates me to create, to act.
+              I love getting to the bottom of the truth. I love mathematics, but for 
+              education I went to economics. I want to fix this by becoming a programmer. 
+                  I'm used to getting things done, that's why I am graduated from JS/FE 
+              Pre-school and I'm going to finish the rest of the courses at all.
+                  Today I am a printing press operator in a printing house, which gives 
+              me a good help for typesetting.
+            </pre>
+          </div>
         </article>
       </section>
       <div>
-        <article id="skills">
-          <h2>Skills</h2>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript (basic)</li>
-            <li>Git</li>
-            <li>Python</li>
-          </ul>
-        </article>
-        <aside id="code">
-          <h2>Code</h2>
-          <pre>
-            <code>
-              function sum(a, b) {
-                return a + b;
-              }
-              
-              let result = sum(1, 2);
-              alert( result );
-            </code>
-          </pre>
-        </aside>
+        <div class="sc">
+          <article id="skills">
+            <h2>Skills</h2>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript (basic)</li>
+              <li>Git</li>
+              <li>Python</li>
+            </ul>
+          </article>
+          <aside id="code">
+            <h2>Code</h2>
+            <pre>
+              <code>
+                function sum(a, b) {
+                  return a + b;
+                }
+                
+                let result = sum(1, 2);
+                alert( result );
+              </code>
+            </pre>
+          </aside>
+        </div>
         <article id="experience">
           <h2>Experience</h2>
-          <p><a href="https://MDViktor.github.io/rsschool-cv/" target="_blank">CV#1. Markdown & Git</a></p>
-          <p><a href="https://MDViktor.github.io/rsschool-cv/cv" target="_blank">CV#2. HTML, CSS & Git Basics</a></p>
+          <p>1. Markdown & Git  - <a href="https://mdviktor.github.io/rsschool-cv/cv" target="_blank">CV</a></p>
+          <p>2. HTML, CSS & Git Basics - <a href="https://rolling-scopes-school.github.io/mdviktor-JSFEPRESCHOOL2022Q2/travel/" target="_blank">Travel</a></p>
+          <p>3. JavaScript - <a href="https://rolling-scopes-school.github.io/mdviktor-JSFEPRESCHOOL2022Q2/momentum/" target="_blank">Momentum</a>,<a href="https://mdviktor.github.io/eldritch-codejam/data/" target="_blank">Eldritch</a></p>
         </article>
       </div>
       <div>
