feat: css bottom

--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
         </div>
         <article id="experience">
           <h2>Experience</h2>
-          <p>1. Markdown & Git  - <a href="https://mdviktor.github.io/rsschool-cv/cv" target="_blank">CV</a></p>
-          <p>2. HTML, CSS & Git Basics - <a href="https://rolling-scopes-school.github.io/mdviktor-JSFEPRESCHOOL2022Q2/travel/" target="_blank">Travel</a></p>
-          <p>3. JavaScript - <a href="https://rolling-scopes-school.github.io/mdviktor-JSFEPRESCHOOL2022Q2/momentum/" target="_blank">Momentum</a>,<a href="https://mdviktor.github.io/eldritch-codejam/data/" target="_blank">Eldritch</a></p>
+          <div class="ex_container">
+            <p>1. Markdown & Git  - <a href="https://mdviktor.github.io/rsschool-cv/cv" target="_blank">CV</a></p>
+            <p>2. HTML, CSS & Git Basics - <a href="https://rolling-scopes-school.github.io/mdviktor-JSFEPRESCHOOL2022Q2/travel/" target="_blank">Travel</a></p>
+            <p>3. JavaScript - <a href="https://rolling-scopes-school.github.io/mdviktor-JSFEPRESCHOOL2022Q2/momentum/" target="_blank">Momentum</a>,<a href="https://mdviktor.github.io/eldritch-codejam/data/" target="_blank">Eldritch</a></p>
+          </div>
         </article>
       </div>
       <div>
