--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <div class="author_info">
             <h1 class="name">Viktor Morozov</h1>
             <article id="сontacts" class="contacts">
-              <h2>Contacts</h2> 
+              <h2>Contacts</h2>
               <ul>
-                  <li>GitHUB:<a href="https://github.com/MDViktor"> MDViktor</a></li>
+                  <li>GitHUB: <a href="https://github.com/MDViktor">MDViktor</a></li>
                   <li>Discord: Виктор#1524 \ (MDViktor)</li>
                   <li>E-mail: milliondollarboymvd@gmail.com</li>
                   <li>tel.:+79788539557</li>
@@ -86,8 +86,8 @@
         <article id="experience">
           <h2>Experience</h2>
           <div class="ex_container">
-            <p>1. Markdown & Git  - <a href="https://mdviktor.github.io/rsschool-cv/cv" target="_blank">CV</a></p>
-            <p>2. HTML, CSS & Git Basics - <a href="https://rolling-scopes-school.github.io/mdviktor-JSFEPRESCHOOL2022Q2/travel/" target="_blank">Travel</a></p>
+            <p>1. Markdown &amp; Git  - <a href="https://mdviktor.github.io/rsschool-cv/cv" target="_blank">CV</a></p>
+            <p>2. HTML, CSS &amp; Git Basics - <a href="https://rolling-scopes-school.github.io/mdviktor-JSFEPRESCHOOL2022Q2/travel/" target="_blank">Travel</a></p>
             <p>3. JavaScript - <a href="https://rolling-scopes-school.github.io/mdviktor-JSFEPRESCHOOL2022Q2/momentum/" target="_blank">Momentum</a>,<a href="https://mdviktor.github.io/eldritch-codejam/data/" target="_blank">Eldritch</a></p>
           </div>
         </article>
