--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="top">
           <div class="author_info">
             <h1 class="name">Viktor Morozov</h1>
-            <article id="сontacts" class="contacts">
+            <article id="contacts" class="contacts">
               <h2>Contacts</h2>
               <ul>
                   <li>GitHUB: <a href="https://github.com/MDViktor">MDViktor</a></li>
@@ -42,7 +42,7 @@
             <img class="image" src="./assets/avatar.png" alt="my avatar">
           </div>
         </div>
-        <article id="сompetencies" class="competencies">
+        <article id="competencies" class="competencies">
           <h2>Competencies</h2>
           <div class="comp_container">
             <pre>
